fix(remote): keep guided copy compatible with Android 11